plugins {
	id 'com.netflix.dgs.codegen' version '5.1.16'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'	
	id 'java'
	id 'org.asciidoctor.convert' version '1.5.8'
	id 'org.sonarqube' version "3.3"
	id 'org.springframework.boot' version '2.6.15'
}

group = 'com.koopey'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
version = '0.0.1-SNAPSHOT'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	//compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
	//compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.13.Final'
	//compile group: 'org.javassist', name: 'javassist', version: '3.25.0-GA'
	compileOnly 'org.projectlombok:lombok:1.18.28'
	
	implementation 'com.google.guava:guava:23.6-jre'	
	implementation 'com.rabbitmq:amqp-client:5.16.0'
	implementation 'org.hibernate:hibernate-core:5.6.3.Final'
	implementation 'org.hibernate:hibernate-entitymanager:5.6.3.Final'
	implementation 'org.modelmapper:modelmapper:2.4.4'
	//implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
	implementation 'org.springdoc:springdoc-openapi-security:1.6.4'
	//implementation 'org.springframework.boot:spring-boot-starter-autoconfigure'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.kafka:spring-kafka:2.8.2'
	implementation 'io.jsonwebtoken:jjwt:0.9.0'
    implementation(platform("com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:latest.release"))
    implementation "com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter"
	implementation 'javax.xml.bind:jaxb-api:2.2.4'
	implementation 'org.javassist:javassist:3.25.0-GA'
	
	//runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java'	
	
	testImplementation("com.netflix.graphql.dgs:graphql-dgs-client")
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.security:spring-security-test'
}

test {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

asciidoctor {
	inputs.dir snippetsDir
	dependsOn test
}

bootRun {
 	doFirst {
        jvmArgs = ["-Dspring.profiles.active=dev"]
    }
	
	systemProperty 'spring.profiles.active', 'dev'
}

sonarqube {
    properties {
        property "sonar.host.url", "http://localhost:9000"
        property "sonar.login", "312fcde051034f25d8eb3da40e7bc4c5317e479c"
		property "sonar.exclusions", "**/authentication/*,src/main/java/**/*"
		property "sonar.verbose" , "true"
    }
}

/*shadowJar {
    baseName 'api'
    manifest {
        attributes 'Main-Class': 'com.koopey.api.ServerApplication'
    }
}*/